--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 html {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 1px;
+  color: rgb(20, 20, 20);
   cursor: default;
 }
 
@@ -21,10 +22,12 @@ header {
 }
 
 #header_desktop {
+  position: sticky;
+  top: 0;
   height: calc(2rem + 5vh);
   justify-content: flex-end;
   align-items: center;
-  background-color: #101010;
+  background-color: rgb(20, 20, 20);;
 }
 
   #header_desktop ul {
@@ -49,4 +52,50 @@ header {
 
 main {
   margin: 0 4vw;
+  }
+
+.yellow {
+  color: rgb(251, 188, 1);
+}
+
+#menu_icon_container {
+  display: flex;
+  width: 100%;
+  position: fixed;
+  justify-content: flex-end;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+#menu_icon {
+  padding: .5rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#mobile_menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: linear-gradient(
+    rgba(56, 148, 190, 1),
+    rgba(56, 148, 190, 1)
+   );
+   z-index: 1;
+   transition: all 1.3s;
+}
+
+  #mobile_menu ul {
+    height: 100vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  #mobile_menu li {
+    padding-top: 1rem;
+    font-size: 1.5rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
   }
