--- a/contact/css/shared.css
+++ b/contact/css/shared.css
@@ -12,6 +12,8 @@
 #loading_message {
   position: fixed;
   width: 100vw;
-  line-height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: rgba(255, 255, 255, 0.85);
 }
