--- a/contact/css/spinner.css
+++ b/contact/css/spinner.css
@@ -1,7 +1,6 @@
 .lds-spinner {
   display: inline-block;
-  position: relative;
-  top: 0.75rem;
+  margin-right: 2rem;
   width: 3rem;
   height: 3rem;
 }
