--- a/portfolio/css/main_mobile.css
+++ b/portfolio/css/main_mobile.css
@@ -33,3 +33,14 @@ section {
   font-size: 1.5rem;
   text-align: center;
 }
+
+#portfolio {
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.project {
+  width: 90%;
+  margin-bottom: 5rem;
+}
