--- a/portfolio/css/shared.css
+++ b/portfolio/css/shared.css
@@ -5,6 +5,7 @@
 
 #portfolio {
   display: flex;
+  flex-flow: row wrap;
 }
 
 .project {
@@ -21,25 +22,18 @@
 
   .project figure {
     width: 100%;
-    height: auto;
-    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(240, 240, 240);
     border: 3px solid rgb(240, 240, 240);
     overflow: hidden;
+    cursor: default;
   }
   
     .project figure img {
       width: 100%;
-      height: auto;
-      opacity: 0.8;
-      transform: scale(1.1);
-      transition: all .5s;
     }
-
-      .project figure img:hover {
-        opacity: 1;
-        transform: scale(1);
-        cursor: pointer;
-      }
 
 .live_version,
 .view_code {
@@ -54,7 +48,6 @@
 .view_code:hover {
   background-color: rgb(251, 188, 1);
   color: rgb(20, 20, 20);
-  cursor: pointer;
 }
 
 .live_version {
