--- a/about/css/main_mobile.css
+++ b/about/css/main_mobile.css
@@ -6,6 +6,10 @@
   display: block;
 }
 
+    #header_mobile li:nth-child(2) {
+      border-top: 1px solid rgb(251, 188, 1);
+    }
+
 main {
   min-height: 85vh;
   display: flex;
@@ -28,23 +32,20 @@ section {
 #introduction {
   width: 80%;
   max-width: 300px;
-  display: flex;
-  justify-content: center;
   font-size: 1.5rem;
   text-align: center;
 }
 
 #info {
   flex-flow: column nowrap;
-  font-size: 1rem;
+  margin-top: 1rem;
 }
 
   #info p {
-    width: 100%;
     margin-top: 3rem;
     padding: 0 5vw;
+    font-size: 1.1rem;
     text-align: center;
-
   }
 
 img {
