--- a/contact/css/main_desktop.css
+++ b/contact/css/main_desktop.css
@@ -6,6 +6,14 @@
   display: flex;
 }
 
+    #header_desktop li:nth-child(3) {
+      border-bottom: 1px solid rgba(240, 240, 240, 0.8);
+    }
+
+      #header_desktop li:nth-child(3):hover {
+        border-color: rgb(251, 188, 1);
+      }
+
 #heading {
   margin: calc(15vh - 3rem) 0 1vh 0;
   font-size: 6rem;
