--- a/css/main_desktop.css
+++ b/css/main_desktop.css
@@ -6,6 +6,14 @@
   display: flex;
 }
 
+    #header_desktop li:nth-child(1) {
+      border-bottom: 1px solid rgba(240, 240, 240, 0.8);
+    }
+
+      #header_desktop li:nth-child(1):hover {
+        border-color: rgb(251, 188, 1);
+        }
+
 #name {
   margin: calc(25vh - 3rem) 0 1.5rem 0;
   font-size: 6rem;
