--- a/portfolio/css/main_mobile.css
+++ b/portfolio/css/main_mobile.css
@@ -6,6 +6,10 @@
   display: block;
 }
 
+    #header_mobile li:nth-child(4) {
+      border-top: 1px solid rgb(251, 188, 1);
+    }
+
 main {
   min-height: 85vh;
   display: flex;
@@ -28,8 +32,6 @@ section {
 #introduction {
   width: 80%;
   max-width: 300px;
-  display: flex;
-  justify-content: center;
   font-size: 1.5rem;
   text-align: center;
 }
