prefixed, minified + about page finished + small fixes

--- a/about/css/main_desktop.css
+++ b/about/css/main_desktop.css
@@ -1,60 +1,1 @@
-#header_mobile {
-  display: none;
-}
-
-#header_desktop {
-  display: flex;
-}
-
-    #header_desktop li:nth-child(2) {
-      border-bottom: 1px solid rgba(240, 240, 240, 0.8);
-    }
-
-      #header_desktop li:nth-child(2):hover {
-        border-color: rgb(251, 188, 1);
-      }
-
-#heading {
-  margin: calc(15vh - 3rem) 0 1vh 0;
-  font-size: 6rem;
-  letter-spacing: .3rem;
-}
-
-#introduction {
-  font-size: 2rem;
-}
-
-#info {
-  margin: 8vh 3vw 0 3vw;
-  flex-flow: row wrap;
-}
-
-#info1 {
-  display: flex;
-  width: 100%;
-  flex-flow: row wrap;
-  border: 1px solid yellow;
-}
-
-  #info1 > img {
-    border: 1px solid green;
-  }
-
-  #info1 > p {
-    width: 65%;
-    max-width: 40rem;
-    min-width: 28rem;
-    border: 1px solid red;
-  }
-
-#info2 {
-  margin-top: 1rem;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-#info2 > p {
-  width: 85%;
-}
+#header_mobile{display:none}#header_desktop{display:-webkit-box;display:-ms-flexbox;display:flex}#header_desktop li:nth-child(2){border-bottom:1px solid rgba(240,240,240,.8)}#header_desktop li:nth-child(2):hover{border-color:#fbbc01}#heading{margin:calc(15vh - 3rem) 0 1vh 0;font-size:6rem;letter-spacing:.3rem}#introduction{font-size:2rem}#info{margin:8vh 3vw 0 3vw;width:calc(25rem + 40%);-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap}#info2{margin-top:1rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start}
