--- a/about/css/main_mobile.css
+++ b/about/css/main_mobile.css
@@ -1,57 +1,1 @@
-#header_desktop {
-  display: none;
-}
-
-#header_mobile {
-  display: block;
-}
-
-    #header_mobile li:nth-child(2) {
-      border-top: 1px solid rgb(251, 188, 1);
-    }
-
-main {
-  min-height: 85vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-section {
-  margin: 5vh 0;
-}
-
-#heading {
-  margin: calc(1.5rem + 8vh) 0 0 0;
-  font-size: 3.1rem;
-  letter-spacing: .2rem;
-  text-align: center;
-}
-
-#introduction {
-  width: 80%;
-  max-width: 300px;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-#info {
-  flex-flow: column nowrap;
-  margin-top: 1rem;
-}
-
-  #info p {
-    margin-top: 3rem;
-    padding: 0 5vw;
-    font-size: 1.1rem;
-    text-align: center;
-  }
-
-img {
-  width: 50%;
-  height: 50%;
-  max-width: 200px;
-  max-height: 200px;
-  margin: 0 auto;
-}
+#header_desktop{display:none}#header_mobile{display:block}#header_mobile li:nth-child(2){border-top:1px solid #fbbc01}main{min-height:85vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}section{margin:5vh 0}#heading{margin:calc(1.5rem + 8vh) 0 0 0;font-size:3.1rem;letter-spacing:.2rem;text-align:center}#introduction{width:80%;max-width:300px;font-size:1.5rem;text-align:center}#info{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;margin-top:1rem}#info p{margin-top:2.5rem;padding:0 5vw;font-size:1.1rem;text-align:center}#info1{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}img{width:50%;height:50%;max-width:200px;max-height:200px;margin:0 auto}
