--- a/css/shared.css
+++ b/css/shared.css
@@ -1,40 +1,1 @@
-body {
-  background: 
-    linear-gradient(
-      rgba(56, 148, 190, 0.75),
-      rgba(56, 148, 190, 0.75)
-    ),
-    url(../img/stanley-dai.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.vertical {
-  display: inline-block;
-  writing-mode: vertical-lr;
-  color: rgb(251, 188, 1);
-}
-
-#name-vert {
-  transform: rotate(180deg) translate(10%, -1%);
-}
-
-#job {
-  padding: 0 1rem 0.4rem 1rem;
-  background: rgba(65, 159, 202, 0.5);
-}
-
-#job-vert {
-  transform: rotate(180deg) translate(-15%, 0);
-}
-
-#icons {
-  margin-top: 1.5rem;
-  font-size: 1.5rem;
-  color: rgb(240, 240, 240);
-}
-
-#icons > a {
-  margin: 0 1rem;
-  transition: all .3s;
-}
+body{background:-webkit-gradient(linear,left top,left bottom,from(rgba(56,148,190,.75)),to(rgba(56,148,190,.75))),url(../img/stanley-dai.jpg);background:-o-linear-gradient(rgba(56,148,190,.75),rgba(56,148,190,.75)),url(../img/stanley-dai.jpg);background:linear-gradient(rgba(56,148,190,.75),rgba(56,148,190,.75)),url(../img/stanley-dai.jpg);background-size:cover;background-repeat:no-repeat}.vertical{display:inline-block;-webkit-writing-mode:vertical-lr;-ms-writing-mode:tb-lr;writing-mode:vertical-lr;color:#fbbc01}#name-vert{-webkit-transform:rotate(180deg) translate(10%,-1%);-ms-transform:rotate(180deg) translate(10%,-1%);transform:rotate(180deg) translate(10%,-1%)}#job{margin-top:1vh;padding:0 1rem .4rem 1rem;background:rgba(65,159,202,.5)}#job-vert{-webkit-transform:rotate(180deg) translate(-15%,0);-ms-transform:rotate(180deg) translate(-15%,0);transform:rotate(180deg) translate(-15%,0)}#icons{margin-top:3vh;font-size:1.5rem;color:#f0f0f0}#icons>a{margin:0 1rem;-webkit-transition:all .3s;-o-transition:all .3s;transition:all .3s}
