--- a/portfolio/css/shared.css
+++ b/portfolio/css/shared.css
@@ -1,61 +1,1 @@
-#introduction {
-  padding: 1rem 2rem;
-  background: rgba(65, 159, 202, 0.5);
-}
-
-#portfolio {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.project {
-  width: 28%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-    .project > a:first-child {
-      width: 100%;
-    }
-
-  .project figure {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(240, 240, 240);
-    border: 3px solid rgb(240, 240, 240);
-    overflow: hidden;
-    cursor: default;
-  }
-  
-    .project figure img {
-      width: 100%;
-    }
-
-.live_version,
-.view_code {
-  width: 100%;
-  margin-top: .5rem;
-  padding: 1rem 1.5rem;
-  font-size: 1.2rem;
-  transition: all .2s;
-}
-
-.live_version:hover,
-.view_code:hover {
-  background-color: rgb(251, 188, 1);
-  color: rgb(20, 20, 20);
-}
-
-.live_version {
-  background-color: rgb(240, 240, 240);
-  color: rgb(20, 20, 20);
-}
-
-.view_code {
-  background-color: rgb(20, 20, 20);
-  color: rgb(240, 240, 240);
-}
+#introduction{padding:1rem 2rem;background:rgba(65,159,202,.5)}#portfolio{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-flow:row wrap;flex-flow:row wrap}.project{width:28%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.project>a:first-child{width:100%}.project figure{width:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background-color:#f0f0f0;border:3px solid #f0f0f0;overflow:hidden;cursor:default}.project figure img{width:100%}.live_version,.view_code{width:100%;margin-top:.5rem;padding:1rem 1.5rem;font-size:1.2rem;-webkit-transition:all .2s;-o-transition:all .2s;transition:all .2s}.live_version:hover,.view_code:hover{background-color:#fbbc01;color:#141414}.live_version{background-color:#f0f0f0;color:#141414}.view_code{background-color:#141414;color:#f0f0f0}
