--- a/about/css/shared.css
+++ b/about/css/shared.css
@@ -1,29 +1,1 @@
-#mobile_menu {
-  display: none;
-}
-
-#introduction {
-  padding: 1rem 2rem;
-  background: rgba(65, 159, 202, 0.5);
-}
-
-img {
-  border-radius: 20%;
-  box-shadow: 4px 4px 8px rgb(40, 40, 40);
-}
-
-#info {
-  display: flex;
-  border: 1px solid blue;
-}
-
-  #info p {
-    margin-top: 1rem;
-    padding-left: 3rem;
-    font-size: 1.4rem;
-    line-height: 1.7rem;
-  }
-
-    #info p::first-line {
-      text-indent: 1rem;
-    }
+#mobile_menu{display:none}#introduction{padding:1rem 2rem;background:rgba(65,159,202,.5)}img{border-radius:20%;-webkit-box-shadow:4px 4px 8px #282828;box-shadow:4px 4px 8px #282828}#info{display:-webkit-box;display:-ms-flexbox;display:flex}#info p{margin-top:1rem;padding-left:3rem;font-size:1.4rem;line-height:1.7rem}#info p::first-line{text-indent:1rem}#info2 p:last-child{margin-bottom:6vh}#info1{display:-webkit-box;display:-ms-flexbox;display:flex;width:100%}
