--- a/contact/css/shared.css
+++ b/contact/css/shared.css
@@ -1,19 +1,1 @@
-#introduction {
-  padding: 1rem 2rem;
-  background: rgba(65, 159, 202, 0.5);
-}
-
-  #form iframe {
-    width: 640px;
-    max-width: 100%;
-    object-fit: cover;
-  }
-
-#loading_message {
-  position: fixed;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(255, 255, 255, 0.85);
-}
+#introduction{padding:1rem 2rem;background:rgba(65,159,202,.5)}#form iframe{width:640px;max-width:100%;-o-object-fit:cover;object-fit:cover}#loading_message{position:fixed;width:100vw;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:rgba(255,255,255,.85)}
