--- a/css/mcleod-reset.css
+++ b/css/mcleod-reset.css
@@ -1,63 +1,1 @@
-html, body, div, span, h1, h2, h3, h4, h5, h6, button, p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strong, sub, sup, b, u, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, figure, figcaption, footer, header, nav, output, section, time, mark, audio, video, input, textarea, select {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    /* inherits the browser's font properties: font-size 16px */
-    font: inherit;
-    /*  specifies the vertical alignment of an inline element */
-    vertical-align: baseline;
-
-    box-sizing: border-box;
-
-    /*  specifies the height of line boxes within the element. */
-    line-height: 1;
-
-    border-radius: 0;
-
-    /* no outline around anything */
-    outline: none;
-
-    /* inherit the color value of the parent */
-    color: inherit;
-}
-
-ol, ul {
-    /* no bullets in lists */
-    list-style: none;
-}
-
-a {
-    /* no underline */
-    text-decoration: none;
-}
-
-button {
-    cursor: pointer;
-    background-color: transparent;
-}
-
-blockquote, q {
-    /* no quotes */
-    quotes: none;
-}
-
-table {
-    /* no spacing between cells*/
-    border-spacing: 0;
-    /*borders are collapsed - adjacent table cells share borders */
-    border-collapse: collapse;
-}
-
-/*
-input, select, progress{
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-*/
-
-svg {
-    width: 1.9em;
-    height: 1.9em;
-    fill: currentColor;
-}
+a,abbr,address,article,aside,audio,b,blockquote,body,button,canvas,caption,cite,code,dd,del,dfn,div,dl,dt,em,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,html,i,img,input,ins,kbd,label,legend,li,mark,nav,ol,output,p,pre,q,s,samp,section,select,small,span,strong,sub,sup,table,tbody,td,textarea,tfoot,th,thead,time,tr,u,ul,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline;-webkit-box-sizing:border-box;box-sizing:border-box;line-height:1;border-radius:0;outline:0;color:inherit}ol,ul{list-style:none}a{text-decoration:none}button{cursor:pointer;background-color:transparent}blockquote,q{quotes:none}table{border-spacing:0;border-collapse:collapse}svg{width:1.9em;height:1.9em;fill:currentColor}
