--- a/portfolio/css/main_mobile.css
+++ b/portfolio/css/main_mobile.css
@@ -1,48 +1,1 @@
-#header_desktop {
-  display: none;
-}
-
-#header_mobile {
-  display: block;
-}
-
-    #header_mobile li:nth-child(4) {
-      border-top: 1px solid rgb(251, 188, 1);
-    }
-
-main {
-  min-height: 85vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-section {
-  margin: 5vh 0;
-}
-
-#heading {
-  margin: calc(1.5rem + 8vh) 0 0 0;
-  font-size: 3.1rem;
-  letter-spacing: .2rem;
-  text-align: center;
-}
-
-#introduction {
-  width: 80%;
-  max-width: 300px;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-#portfolio {
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.project {
-  width: 90%;
-  margin-bottom: 5rem;
-}
+#header_desktop{display:none}#header_mobile{display:block}#header_mobile li:nth-child(4){border-top:1px solid #fbbc01}main{min-height:85vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}section{margin:5vh 0}#heading{margin:calc(1.5rem + 8vh) 0 0 0;font-size:3.1rem;letter-spacing:.2rem;text-align:center}#introduction{width:80%;max-width:300px;font-size:1.5rem;text-align:center}#portfolio{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-flow:column nowrap;flex-flow:column nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.project{width:90%;margin-bottom:5rem}
