--- a/contact/css/sharedDev.css
+++ b/contact/css/sharedDev.css
@@ -1,6 +1,24 @@
+body {
+  background: 
+    linear-gradient(
+      rgba(56, 148, 190, 0.75),
+      rgba(56, 148, 190, 0.75)
+    ),
+    url(../../img/thomas-drouault.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 #introduction {
   padding: 1rem 2rem;
   background: rgba(65, 159, 202, 0.5);
+}
+
+#form {
+  display: flex;
+  justify-content: center;
 }
 
   #form iframe {
@@ -16,4 +34,9 @@
   justify-content: center;
   align-items: center;
   color: rgba(255, 255, 255, 0.85);
+}
+
+iframe {
+  opacity: 0;
+  transition: all 1.5s ease-out;
 }
