--- a/portfolio/css/sharedDev.css
+++ b/portfolio/css/sharedDev.css
@@ -7,6 +7,7 @@ body {
     url(../../img/code.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #introduction {
@@ -17,11 +18,12 @@ body {
 #portfolio {
   display: flex;
   flex-flow: row wrap;
+  margin-bottom: 2rem;
 }
 
 .portfolio_icon {
   margin-right: 1rem;
-  font-size: .7rem;
+  font-size: calc(0.45vw + .3rem);
   vertical-align: sub;
 }
 
@@ -31,40 +33,38 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  padding: .5rem;
+  box-shadow: 0px 0px 10px 2px rgb(40, 40, 40);
 }
 
-    .project > a:first-child {
-      width: 100%;
-    }
+.project_img_container {
+  width: 100%;
+  cursor: default;
+}
 
-  .project figure {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(240, 240, 240);
-    border: 3px solid rgb(240, 240, 240);
-    overflow: hidden;
-    cursor: default;
+  #pexeso .project_img_container {
+    background: url(../../../img/pex1res.jpg);
   }
-  
-    .project figure img {
-      width: 100%;
-    }
+
+  #calculator .project_img_container {
+    background: url(../../../img/calcres.jpg);
+  }
+
+  #pexeso .project_img_container,
+  #calculator .project_img_container {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
 .live_version,
 .view_code {
-  width: 100%;
+  width: 95%;
   margin-top: .5rem;
   padding: 1rem 1.5rem;
-  font-size: 1.2rem;
+  font-size: calc(0.4vw + 0.65rem);
+  border-radius: 20%;
   transition: all .2s;
-}
-
-.live_version:hover,
-.view_code:hover {
-  background-color: rgb(251, 188, 1);
-  color: rgb(20, 20, 20);
 }
 
 .live_version {
@@ -76,3 +76,9 @@ body {
   background-color: rgb(20, 20, 20);
   color: rgb(240, 240, 240);
 }
+
+  .live_version:hover,
+  .view_code:hover {
+    background-color: rgb(251, 188, 1);
+    color: rgb(20, 20, 20);
+  }
