--- a/styleDev.css
+++ b/styleDev.css
@@ -64,7 +64,7 @@ main {
   position: fixed;
   justify-content: flex-end;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.1));
   cursor: pointer;
 }
 
@@ -83,7 +83,7 @@ main {
     rgba(56, 148, 190, 1)
    );
    z-index: 1;
-   transition: all 1.3s;
+   /* transition: all 1.3s; */
 }
 
   #mobile_menu ul {
