--- a/contact/css/main_mobileDev.css
+++ b/contact/css/main_mobileDev.css
@@ -24,7 +24,7 @@ section {
 
 #heading {
   margin: calc(1.5rem + 8vh) 0 0 0;
-  font-size: 3.1rem;
+  font-size: calc(2vw + 2rem);
   letter-spacing: .2rem;
   text-align: center;
 }
@@ -32,7 +32,7 @@ section {
 #introduction {
   width: 80%;
   max-width: 19rem;
-  font-size: 1.5rem;
+  font-size: calc(1.5vw + 1rem);
   text-align: center;
 }
 
