--- a/css/main_mobileDev.css
+++ b/css/main_mobileDev.css
@@ -19,15 +19,17 @@ section {
 }
 
 #name {
+  min-width: 6em;
   margin-top: calc(1.5rem + 5vh);
-  font-size: 3.1rem;
+  font-size: calc(3vw + 2rem);
   letter-spacing: .2rem;
+  text-align: center;
 }
 
 #job {
   width: 80%;
   max-width: 300px;
-  font-size: 1.5rem;
+  font-size: calc(2vw + 1rem);
 }
 
 #icons {
