--- a/styleDev.css
+++ b/styleDev.css
@@ -19,6 +19,21 @@ header {
   color: rgb(240, 240, 240);
 }
 
+footer {
+  display: inline-block;
+  right: 50%;
+  transform: translateX(calc(50vw - 50%));
+  margin: 2rem 0 5px;
+  padding: .5rem 0;
+  text-align: center;
+  background: linear-gradient(
+    0.25turn,
+    rgba(255, 255, 255, 0.00),
+    rgba(255, 255, 255, 0.20),
+    rgba(255, 255, 255, 0.00)
+  );
+}
+
 #header_desktop {
   position: sticky;
   top: 0;
@@ -41,25 +56,43 @@ header {
     transition: all .3s;
   }
   
-  #header_desktop li:hover {
-    color: rgb(251, 188, 1);
-    border-bottom: 1px solid rgb(251, 188, 1);
+    #header_desktop li:hover {
+      color: rgb(251, 188, 1);
+      border-bottom: 1px solid rgb(251, 188, 1);
+    }
+
+  #header_desktop > .language {
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+  }
+
+    .language_en {
+      margin-bottom: .5rem;
+      padding: .5rem;
+    }
+    
+    .language_cz {
+      margin-top: .5rem;
+      padding: .5rem;
     }
 
 #header_mobile {
   height: 1vh;
 }
 
-main {
-  margin: 0 5vw;
-}
-
-.yellow {
-  color: rgb(251, 188, 1);
-}
-
-#menu_icon_container {
-  display: flex;
+  #header_mobile > .language {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    padding: .1rem .3rem;
+    font-size: 1.2rem;
+    /* border: 1px solid red; */
+    z-index: 2;
+  }
+  
+  #menu_icon_container {
+    display: flex;
   width: 100%;
   position: fixed;
   justify-content: flex-end;
@@ -73,7 +106,7 @@ main {
   font-size: 0.8rem;
   }
 
-#mobile_menu {
+  #mobile_menu {
   display: none;
   position: fixed;
   top: 0;
@@ -81,7 +114,7 @@ main {
   background: linear-gradient(
     rgba(56, 148, 190, 1),
     rgba(56, 148, 190, 1)
-   );
+    );
    z-index: 1;
 }
 
@@ -92,9 +125,17 @@ main {
     justify-content: space-around;
     align-items: center;
   }
-
+  
   #mobile_menu li {
     padding-top: 1rem;
     font-size: 1.5rem;
     border-top: 1px solid rgba(240, 240, 240, 0.2);
+  }
+    
+  main {
+    margin: 0 5vw;
+  }
+  
+  .yellow {
+    color: rgb(251, 188, 1);
   }
