--- a/portfolio/css/sharedDev.css
+++ b/portfolio/css/sharedDev.css
@@ -18,6 +18,7 @@ body {
 #portfolio {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   margin-bottom: 2rem;
 }
 
@@ -28,6 +29,7 @@ body {
 }
 
 .project {
+  min-width: 250px;
   width: 28%;
   display: flex;
   flex-flow: column nowrap;
