--- a/styleDev.css
+++ b/styleDev.css
@@ -6,11 +6,18 @@ html {
 }
 
 body {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   min-height: 100vh;
   background: linear-gradient(
     rgba(56, 148, 190, 1),
     rgba(56, 148, 190, 1)
    );
+}
+
+header, main {
+  width: 100%;
 }
 
 header {
@@ -20,11 +27,10 @@ header {
 }
 
 footer {
-  display: inline-block;
-  right: 50%;
-  transform: translateX(calc(50vw - 50%));
-  margin: 2rem 0 5px;
+  max-width: 80%;
+  margin: 2rem auto .3rem;
   padding: .5rem 0;
+  font-size: .8rem;
   text-align: center;
   background: linear-gradient(
     0.25turn,
@@ -67,15 +73,24 @@ footer {
     align-items: center;
   }
 
-    .language_en {
-      margin-bottom: .5rem;
-      padding: .5rem;
-    }
-    
-    .language_cz {
-      margin-top: .5rem;
-      padding: .5rem;
-    }
+.language_en, .language_cz {
+  padding: 0 .1rem .1rem;
+  border-bottom: 1px solid rgba(251, 188, 1, 0);
+  transition: all .3s;
+}
+
+.language_en {
+  margin: 0 .2rem .5rem;
+}
+
+.language_cz {
+  margin: .8rem .2rem 0;
+}
+
+  .language_en:hover, .language_cz:hover {
+    color: rgb(251, 188, 1);
+    border-bottom: 1px solid rgb(251, 188, 1);
+  }
 
 #header_mobile {
   height: 1vh;
@@ -87,7 +102,6 @@ footer {
     align-items: center;
     padding: .1rem .3rem;
     font-size: 1.2rem;
-    /* border: 1px solid red; */
     z-index: 2;
   }
   
@@ -138,4 +152,12 @@ footer {
   
   .yellow {
     color: rgb(251, 188, 1);
+  }
+
+  .underline {
+    border-bottom: 1px solid rgb(240, 240, 240);
+  }
+
+  .fb-like {
+    vertical-align: middle;
   }
