--- a/portfolio/css/sharedDev.css
+++ b/portfolio/css/sharedDev.css
@@ -10,6 +10,30 @@ body {
   background-attachment: fixed;
 }
 
+h4 {
+  margin: .4rem auto .8rem;
+  padding: .3rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-align: center;
+  border-bottom: 1px solid rgb(251, 188, 1);
+}
+
+h6 {
+  align-self: flex-start;
+  margin-bottom: .2rem;
+}
+
+img {
+  /* height is set by script */
+  max-width: 100%;
+  min-width: 80%;
+}
+
+footer {
+  margin-top: 0;
+}
+
 #introduction {
   padding: 1rem 2rem;
   background: rgba(65, 159, 202, 0.5);
@@ -19,6 +43,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  align-items: center;
   margin-bottom: 2rem;
 }
 
@@ -29,40 +54,33 @@ body {
 }
 
 .project {
-  min-width: 250px;
+  max-width: 40rem;
+  min-width: 15.5rem;
   width: 28%;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  flex-flow: row wrap;
+  align-items: flex-start;
   padding: .5rem;
-  box-shadow: 0px 0px 10px 2px rgb(40, 40, 40);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: rgba(65, 159, 202, 0.5);
 }
 
 .project_img_container {
   width: 100%;
-  cursor: default;
 }
 
-  #pexeso .project_img_container {
-    background: url(../../../img/pex1res.jpg);
-  }
-
-  #calculator .project_img_container {
-    background: url(../../../img/calcres.jpg);
-  }
-
   #pexeso .project_img_container,
-  #calculator .project_img_container {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+  #calculator .project_img_container,
+  #chat-app .project_img_container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
 
 .live_version,
 .view_code {
   width: 95%;
-  margin-top: .5rem;
+  margin: .5rem auto 0;
   padding: 1rem 1.5rem;
   font-size: calc(0.4vw + 0.65rem);
   border-radius: 20%;
@@ -79,8 +97,29 @@ body {
   color: rgb(240, 240, 240);
 }
 
-  .live_version:hover,
-  .view_code:hover {
-    background-color: rgb(251, 188, 1);
-    color: rgb(20, 20, 20);
+.live_version:hover,
+.view_code:hover {
+  background-color: rgb(251, 188, 1);
+  color: rgb(20, 20, 20);
+}
+
+.technologies {
+  width: 100%;
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.technologies-list {
+  margin-left: 2rem;
+  list-style: disc;
+}
+
+.disabled{
+  background-color: rgb(220, 220, 220);
+}
+
+  .disabled:hover{
+    cursor: default;
+    background-color: rgb(220, 220, 220);
   }
